UPDATE 【策略模式】 订单打折Demo代码补充

--- a/11-策略模式.md
+++ b/11-策略模式.md
@@ -344,6 +344,20 @@ public class DisCountStrategyFactory {
         return strategies.get(orderType);
     }
 }
+/**
+ * 订单服务
+ *
+ * @author liuhangfei
+ * @date 2023/03/20 15:28
+ **/
+public class OrderService {
+
+    public static double disCount(Order order){
+        OrderTypeEnum type = order.getType();
+        DisCountStrategy disCountStrategy = DisCountStrategyFactory.getDisCountStrategy(type);
+        return disCountStrategy.callDisCount(order);
+    }
+}
 
 /**
  * 测试类
